--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
 body, html {
   height: 100%;
   margin: 0;
-  background-color: #282c34;
+  /*background-color: #282c34;*/
 }
 
 .app-container {
